examples/test/testpolicy3777.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3777
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key29: value28
      key7: value16
      key30: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value47
          key37: value44
          key49: value23
      podSelector:
        matchLabels:
          key44: value14
          key47: value37
          key27: value24
